# GP2040-CE-SyncWindow

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TAP_SYNC_README.md  build_nobd.bat  build_w6100.bat  compile_proto.cmake
.github/workflows/: backfill-pico2w.yml  cmake.yml  node.js.yml  release.yml
VMU/: 187 (1).VMI  marvel-vs-capcom-2.21565.dci
configs/RP2040AdvancedBreakoutBoard/: BoardConfig.h
configs/W6100EVBPico2/: BoardConfig.h  README.md
configs/WaveshareZero/: BoardConfig.h
docs/: AGENT-HANDOFF-PRECOMPUTED-TABLES.md  DREAMCAST.md  EXPERT-CONTEXT.md  GP-RETRO-ONLINE-MVP.md  MAPLECAST-ARCHITECTURE.md  NOBD-EXPERT-CONTEXT.md  README.md  W6100-SETUP-GUIDE.md  WHY-NOBD.md  WORKSTREAM-SERVERSYNC.md  dreamcast_maple_expert.md  vmu_expert_reference.md
headers/: drivermanager.h  gp2040.h
headers/addons/: display.h
headers/drivers/dreamcast/: DreamcastDriver.h  DreamcastVMU.h  maple_bus.h
lib/: CMakeLists.txt
lib/ioLibrary_Driver/: CMakeLists.txt
proto/: config.proto  enums.proto
src/: config_utils.cpp  drivermanager.cpp  gp2040.cpp  gp2040aux.cpp  webconfig.cpp
src/addons/: display.cpp  neopicoleds.cpp
src/drivers/dreamcast/: DreamcastDriver.cpp  DreamcastVMU.cpp  maple.pio  maple_bus.cpp
src/net/: uart_rx.pio  w6100.cpp  w6100.h
tools/: pc_gamepad_sender.py  pico_uart_bridge.py  relay_server.py
tools/finger-gap-tester/src/: app.rs
www/scripts/: extract-layouts.cjs
www/src/: App.jsx
www/src/Components/: LayoutPreview.jsx  Navigation.jsx
www/src/Data/: ButtonLayoutData.js
www/src/Pages/: DisplayConfig.jsx  SettingsPage.jsx  (+1 more)
(+8 files in other folders)
